Create structured personal site layout

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "eleventy",
-    "serve": "eleventy --serve --watch"
+    "start": "eleventy --serve"
   },
   "keywords": [],
   "author": "",
