Revert "Merge remote-tracking branch 'origin/thierry-codex/configure-eleventy-for-personal-site'"
This reverts commit 095294de9ae0e3fc1a3ebed8525a682554b29f03, reversing
changes made to fd1e07d778fe94f76ed5881321ded15df978a0d7.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "eleventy",
-    "start": "eleventy --serve"
+    "serve": "eleventy --serve --watch"
   },
   "keywords": [],
   "author": "",
